--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 body{
-    background-color: sienna;
+    background-color: rgb(255, 0, 234);
 }
 p{
-    color: cadetblue;
+    color: rgb(255, 0, 0);
     font-size: 22px;
+    font-style: italic;
+    text-decoration: wavy;
 }
 img{
     width: 500px;
     height: 500px;
 }
+
